TMS Final Assignment
Updated:
1) loggers
2) Combined statistic creation in one
3)Implemented moving incorrect files to a specific folder